src/test/deca/context/valid/protected_assign_to_public.deca
/*
    Description : Assignation d'une variable protected à une variable publique

    Résultat: OK
*/
class A{
    protected int x = 1;
    int y = x;
}
