src/test/deca/context/invalid/if_int_cast_to_float.deca
/*
    Description : Utilisation d'un conversion ver au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x = 2;
    if ((float)(x)){
        x = 2;
    }
}
